--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
-
+    app:startDestination="@id/rollerFragment">
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="sheridan.jawedzak.assignment2.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
+        android:id="@+id/rollerFragment"
+        android:name="sheridan.jawedzak.assignment2.ui.roller.RollerFragment"
+        android:label="@string/roller_fragment_label"
+        tools:layout="@layout/fragment_roller" />
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="sheridan.jawedzak.assignment2.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+        android:id="@+id/historyFragment"
+        android:name="sheridan.jawedzak.assignment2.ui.history.HistoryFragment"
+        android:label="@string/history_fragment_label"
+        tools:layout="@layout/fragment_history" />
+    <action android:id="@+id/action_global_to_history" app:destination="@id/historyFragment" />
 </navigation>
