--- a/app/src/main/res/layout/fragment_roller.xml
+++ b/app/src/main/res/layout/fragment_roller.xml
@@ -15,7 +15,7 @@
                 android:id="@+id/num1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="__"
                 android:textColor="#F30808"
                 android:textSize="36sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -43,7 +43,7 @@
                 android:id="@+id/num2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="__"
                 android:textColor="#F30808"
                 android:textSize="36sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -71,7 +71,7 @@
                 android:id="@+id/num3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="__"
                 android:textColor="#F30808"
                 android:textSize="36sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -142,6 +142,7 @@
                 android:text="Roll Dice Game"
                 android:textColor="#F30808"
                 android:textSize="36sp"
+                android:textStyle="bold|italic"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.518"
